--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core:
+  firebase_auth: ^4.1.4
+  google_sign_in: ^5.4.2
+  flutter_facebook_auth: ^5.0.6
+  getwidget:
 
 dev_dependencies:
   flutter_test:
